# worker-py-core

./: .gitignore  Dockerfile  Dockerfile.cache  cache_server.py  main.py  main_worker.py  requirements.txt  uploader_worker.py
common/: common_imports.py  job_status.py  logger.py  models.py  rabbit_utils.py  redis_utils.py  simulation_utils.py
libraries/tank_simulator/: pyproject.toml
libraries/tank_simulator/tank_simulator/: __init__.py  common_imports.py  config_models.py  core_functions.py  environment.py  orchestration.py  preset_schema.py
